# subduction

./: Cargo.toml  flake.nix
.cargo/: config.toml
.cursor/skills/revendor-automerge-wasm/: SKILL.md
automerge_subduction_wasm/: .tsconfig.build.json  AGENTS.md  Cargo.toml  UNIFIED_AUTOMERGE_SUBDUCTION_WASM_SPEC.md  build_js.js  build_wasm.mjs  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json
automerge_subduction_wasm/js/automerge/: VENDOR.md  implementation.ts  low_level.ts  proxies.ts  wasm_types.d.ts
automerge_subduction_wasm/src/: lib.rs
automerge_subduction_wasm/test/: automerge_doc.test.ts  automerge_sync.test.ts  dist_layout.test.ts  init.test.ts  no_upstream_imports.test.ts  sedimentree_integration.test.ts  subduction_surface.test.ts  types.test-d.ts
crates/automerge_wasm/: Cargo.toml  VENDOR.md
crates/automerge_wasm/src/: lib.rs
