[package]
name = "automerge_subduction_wasm"
version = "0.12.0"
description = "Wasm bindings for syncing Automerge documents via Subduction"
categories = ["web-programming"]
keywords = ["automerge", "sedimentree", "wasm"]
readme = "./README.md"
build = "build.rs"
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
automerge = { workspace = true, features = ["wasm"] }
automerge-wasm = { workspace = true }
automerge_sedimentree_wasm = { workspace = true }
js-sys = { workspace = true }
subduction_wasm = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["registry", "std"] }
# `web-sys` console for the hard-abort logging hook installed in `start()`.
# See `set_on_abort` in src/lib.rs.
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen = { workspace = true }
wasm-tracing = { workspace = true, optional = true }
wasm_refgen = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[features]
default = ["idb", "standalone", "std", "wasm-tracing"]
# IndexedDB storage backend (browser-only).
idb = ["subduction_wasm/idb"]
# Enable the #[wasm_bindgen(start)] entry point. Disable when using
# this crate as a dependency of another cdylib crate that defines
# its own start function (wasm-bindgen allows only one per module).
standalone = []
std = [
  "automerge_sedimentree_wasm/std",
  "subduction_wasm/std",
  "tracing/std",
  "wasm-bindgen/std",
]
wasm-tracing = ["dep:wasm-tracing"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-multivalue", "--enable-mutable-globals", "--enable-nontrapping-float-to-int", "--enable-reference-types", "--enable-sign-ext", "--enable-simd"]

[lints]
workspace = true
