[package]
name = "automerge-wasm"
description = "Vendored js/wasm wrapper for the rust implementation of automerge-backend"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["rlib"]
bench = false

[features]
default = []

[dependencies]
automerge = { workspace = true, features = ["wasm", "utf16-indexing"] }
hex = { version = "0.4" }
itertools = "0.14.0"
js-sys = { workspace = true }
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_bytes = "0.11.5"
serde_json = "1.0"
thiserror = { workspace = true }
wasm-bindgen = { workspace = true, features = ["serde-serialize", "std"] }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[lints.rust]
# Workspace lints inherited, but the vendored upstream code has many
# undocumented public items. We don't maintain its rustdoc.
missing_docs = "allow"
missing_debug_implementations = "allow"
missing_copy_implementations = "allow"

[lints.clippy]
# Vendored code; pre-existing pedantic and style violations are not ours to fix.
all = "allow"
pedantic = "allow"
cargo = "allow"
